--- a/src/angular/autocomplete/BUILD.bazel
+++ b/src/angular/autocomplete/BUILD.bazel
@@ -45,6 +45,7 @@ ng_project(
     deps = [
         ":autocomplete",
         "//:node_modules/@angular/cdk",
+        "//:node_modules/@angular/common",
         "//:node_modules/@angular/core",
         "//:node_modules/@angular/forms",
         "//:node_modules/@angular/platform-browser",
