--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -33,15 +33,7 @@ jobs:
 
   integrity:
     runs-on: ubuntu-latest
-    services:
-      cache:
-        image: ghcr.io/kyubisation/bazel-cache-oci-registry:latest
-        env:
-          repository: ghcr.io/${{ github.repository }}/bazel-cache
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-        ports:
-          - 31385:31385
+
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
       - uses: pnpm/action-setup@v4
@@ -50,7 +42,11 @@ jobs:
           cache: 'pnpm'
           node-version-file: '.nvmrc'
       - run: pnpm install
-
+      - name: "Bazel: Restore remote cache"
+        if: ${{ success() || failure() }}
+        uses: ./.github/actions/download-workflow-bazel-cache
+        with:
+          key: packages
       - name: "Integrity: Verify workspace integrity"
         run: pnpm integrity
       - name: "Integrity: Assert no changes (run `pnpm integrity` if this fails)"
@@ -58,15 +54,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    services:
-      cache:
-        image: ghcr.io/kyubisation/bazel-cache-oci-registry:latest
-        env:
-          repository: ghcr.io/${{ github.repository }}/bazel-cache
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-        ports:
-          - 31385:31385
+
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
       - name: "Bazel: Copy .bazelrc to user home"
@@ -77,20 +65,23 @@ jobs:
           cache: 'pnpm'
           node-version-file: '.nvmrc'
       - run: pnpm install
+      - name: "Bazel: Restore remote cache"
+        if: ${{ success() || failure() }}
+        uses: ./.github/actions/download-workflow-bazel-cache
+        with:
+          key: combined
       - run: bazel build --build_tag_filters=-docs-package,-release-package -- src/...
+      - name: "Bazel: Clean bazel disk cache"
+        if: ${{ success() || failure() }}
+        run: pnpm -s bazel:cache clean --individualMaxSize=${{ env.BAZEL_CACHE_INTERMEDIATE_FILE_MAX_SIZE }}
+      - name: "Bazel: Upload cache"
+        if: ${{ success() || failure() }}
+        uses: ./.github/actions/upload-intermediate-bazel-cache
 
   test:
     runs-on: ubuntu-24.04
     if: ${{ success() || failure() }}
-    services:
-      cache:
-        image: ghcr.io/kyubisation/bazel-cache-oci-registry:latest
-        env:
-          repository: ghcr.io/${{ github.repository }}/bazel-cache
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-        ports:
-          - 31385:31385
+
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
       - name: "Bazel: Copy .bazelrc to user home"
@@ -101,21 +92,24 @@ jobs:
           cache: 'pnpm'
           node-version-file: '.nvmrc'
       - run: pnpm install
+      - name: "Bazel: Download cache"
+        if: ${{ success() || failure() }}
+        uses: ./.github/actions/download-intermediate-bazel-cache
       - run: bazelisk test src/... --build_tag_filters=-e2e --test_tag_filters=-e2e --build_tests_only
+      - name: "Bazel: Clean bazel disk cache"
+        if: ${{ success() || failure() }}
+        run: pnpm -s bazel:cache clean --individualMaxSize=${{ env.BAZEL_CACHE_INTERMEDIATE_FILE_MAX_SIZE }}
+      - name: "Bazel: Upload cache"
+        if: ${{ success() || failure() }}
+        uses: ./.github/actions/upload-intermediate-bazel-cache
+        with:
+          key: bazel-cache-test
 
   docs:
     runs-on: ubuntu-latest
     if: ${{ success() || failure() }}
     needs: build
-    services:
-      cache:
-        image: ghcr.io/kyubisation/bazel-cache-oci-registry:latest
-        env:
-          repository: ghcr.io/${{ github.repository }}/bazel-cache
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-        ports:
-          - 31385:31385
+
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
       - name: "Bazel: Copy .bazelrc to user home"
@@ -126,11 +120,20 @@ jobs:
           cache: 'pnpm'
           node-version-file: '.nvmrc'
       - run: pnpm install
-
+      - name: "Bazel: Download cache"
+        if: ${{ success() || failure() }}
+        uses: ./.github/actions/download-intermediate-bazel-cache
       - name: "Bazel: Build docs"
         if: ${{ success() || failure() }}
         run: pnpm -s build docs
-
+      - name: "Bazel: Clean bazel disk cache"
+        if: ${{ success() || failure() }}
+        run: pnpm -s bazel:cache clean --individualMaxSize=${{ env.BAZEL_CACHE_INTERMEDIATE_FILE_MAX_SIZE }}
+      - name: "Bazel: Upload cache"
+        if: ${{ success() || failure() }}
+        uses: ./.github/actions/upload-intermediate-bazel-cache
+        with:
+          key: bazel-cache-showcase
       - name: "Artifact: Upload docs"
         if: github.event_name == 'pull_request' || github.ref == 'refs/heads/main'
         uses: actions/upload-artifact@v4
@@ -144,15 +147,7 @@ jobs:
     needs: docs
     env:
       IMAGE_REPO: ghcr.io/${{ github.repository }}/showcase-preview
-    services:
-      cache:
-        image: ghcr.io/kyubisation/bazel-cache-oci-registry:latest
-        env:
-          repository: ghcr.io/${{ github.repository }}/bazel-cache
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-        ports:
-          - 31385:31385
+
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
       - name: "Download docs artifact"
@@ -174,3 +169,50 @@ jobs:
           docker image list
         env:
           DOCKER_BUILDKIT: 1
+
+
+  merge-caches:
+    if: ${{ success() || failure() }}
+    needs: [test, docs]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v4
+      - uses: actions/setup-node@v5
+        with:
+          node-version-file: '.nvmrc'
+
+      - uses: actions/github-script@v7
+        with:
+          # Since we don't want to install the full package dependencies, we remove all dependencies that we don't need.
+          # We do this in order to reduce the time needed for this job.
+          script: |
+            const fs = require('fs');
+            let { name, version, devDependencies, scripts } = require('./package.json');
+            const packages = ['@actions/cache', '@types/node', 'ts-node', 'typescript'];
+            devDependencies = packages.reduce((deps, dep) => Object.assign(deps, { [dep]: devDependencies[dep] }), {});
+            scripts = { 'bazel:cache': scripts['bazel:cache'] };
+            fs.writeFileSync('./package.json', JSON.stringify({ name, version, devDependencies, scripts }), 'utf8');
+
+      - name: "PNPM: Install reduced dependencies"
+        run: pnpm install --no-lockfile
+      - name: "Bazel: Create cache directory"
+        run: mkdir -p ~/.bazel-cache/
+      - name: "Bazel: Download test cache"
+        if: ${{ success() || failure() }}
+        uses: ./.github/actions/download-intermediate-bazel-cache
+        with:
+          key: bazel-cache-test
+      - name: "Bazel: Download showcase cache"
+        if: ${{ success() || failure() }}
+        uses: ./.github/actions/download-intermediate-bazel-cache
+        with:
+          key: bazel-cache-showcase
+      - name: "Bazel: Clean bazel disk cache"
+        if: ${{ success() || failure() }}
+        run: pnpm -s bazel:cache clean --maxSize=${{ env.BAZEL_CACHE_COMBINED_MAX_SIZE }} --individualMaxSize=${{ env.BAZEL_CACHE_FILE_MAX_SIZE }}
+
+      - name: "Bazel: Upload remote cache"
+        if: ${{ success() || failure() }}
+        uses: ./.github/actions/upload-workflow-bazel-cache
+        with:
+          key: combined
