--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -6,6 +6,8 @@
     "allowSyntheticDefaultImports": true,
     "target": "es2020",
     "lib": ["es2020"],
-    "strict": true
+    "strict": true,
+    "erasableSyntaxOnly": true,
+    "rewriteRelativeImportExtensions": true
   }
 }
