--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -33,7 +33,6 @@ jobs:
 
   integrity:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
       - uses: pnpm/action-setup@v4
@@ -43,10 +42,13 @@ jobs:
           node-version-file: '.nvmrc'
       - run: pnpm install
       - name: "Bazel: Restore remote cache"
-        if: ${{ success() || failure() }}
-        uses: ./.github/actions/download-workflow-bazel-cache
+        uses: actions/cache/restore@v4
         with:
-          key: packages
+          path: ~/.bazel-cache/sbb-angular
+          key: bazel-${{ env.BAZEL_CACHE_VERSION }}-${{ github.sha }}-${{ github.run_attempt }}
+          restore-keys: |
+            bazel-${{ env.BAZEL_CACHE_VERSION }}-${{ github.sha }}-
+            bazel-${{ env.BAZEL_CACHE_VERSION }}-
       - name: "Integrity: Verify workspace integrity"
         run: pnpm integrity
       - name: "Integrity: Assert no changes (run `pnpm integrity` if this fails)"
@@ -54,7 +56,6 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
       - name: "Bazel: Copy .bazelrc to user home"
@@ -66,10 +67,13 @@ jobs:
           node-version-file: '.nvmrc'
       - run: pnpm install
       - name: "Bazel: Restore remote cache"
-        if: ${{ success() || failure() }}
-        uses: ./.github/actions/download-workflow-bazel-cache
+        uses: actions/cache/restore@v4
         with:
-          key: combined
+          path: ~/.bazel-cache/sbb-angular
+          key: bazel-${{ env.BAZEL_CACHE_VERSION }}-${{ github.sha }}-${{ github.run_attempt }}
+          restore-keys: |
+            bazel-${{ env.BAZEL_CACHE_VERSION }}-${{ github.sha }}-
+            bazel-${{ env.BAZEL_CACHE_VERSION }}-
       - run: bazel build --build_tag_filters=-docs-package,-release-package -- src/...
       - name: "Bazel: Clean bazel disk cache"
         if: ${{ success() || failure() }}
@@ -81,7 +85,7 @@ jobs:
   test:
     runs-on: ubuntu-24.04
     if: ${{ success() || failure() }}
-
+    needs: build
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
       - name: "Bazel: Copy .bazelrc to user home"
@@ -109,7 +113,6 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ success() || failure() }}
     needs: build
-
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
       - name: "Bazel: Copy .bazelrc to user home"
@@ -181,20 +184,6 @@ jobs:
         with:
           node-version-file: '.nvmrc'
 
-      - uses: actions/github-script@v7
-        with:
-          # Since we don't want to install the full package dependencies, we remove all dependencies that we don't need.
-          # We do this in order to reduce the time needed for this job.
-          script: |
-            const fs = require('fs');
-            let { name, version, devDependencies, scripts } = require('./package.json');
-            const packages = ['@actions/cache', '@types/node', 'ts-node', 'typescript'];
-            devDependencies = packages.reduce((deps, dep) => Object.assign(deps, { [dep]: devDependencies[dep] }), {});
-            scripts = { 'bazel:cache': scripts['bazel:cache'] };
-            fs.writeFileSync('./package.json', JSON.stringify({ name, version, devDependencies, scripts }), 'utf8');
-
-      - name: "PNPM: Install reduced dependencies"
-        run: pnpm install --no-lockfile
       - name: "Bazel: Create cache directory"
         run: mkdir -p ~/.bazel-cache/
       - name: "Bazel: Download test cache"
@@ -213,6 +202,7 @@ jobs:
 
       - name: "Bazel: Upload remote cache"
         if: ${{ success() || failure() }}
-        uses: ./.github/actions/upload-workflow-bazel-cache
+        uses: actions/cache/save@v4
         with:
-          key: combined
+          path: ~/.bazel-cache/sbb-angular
+          key: bazel-${{ env.BAZEL_CACHE_VERSION }}-${{ github.sha }}-${{ github.run_attempt }}
