--- a/src/angular/chips/BUILD.bazel
+++ b/src/angular/chips/BUILD.bazel
@@ -50,6 +50,7 @@ ng_project(
         "//:node_modules/@angular/forms",
         "//:node_modules/@angular/platform-browser",
         "//src/angular/autocomplete",
+        "//src/angular/chips/chip",
         "//src/angular/core",
         "//src/angular/core/testing",
         "//src/angular/form-field",
