--- a/src/angular/autocomplete/BUILD.bazel
+++ b/src/angular/autocomplete/BUILD.bazel
@@ -4,7 +4,6 @@ load(
     "ng_project",
     "ng_web_test_suite",
     "sass_binary",
-    "ts_project",
 )
 
 package(default_visibility = ["//visibility:public"])
@@ -36,7 +35,7 @@ sass_binary(
     ],
 )
 
-ts_project(
+ng_project(
     name = "unit_test_sources",
     testonly = True,
     srcs = glob(
@@ -46,6 +45,7 @@ ts_project(
     deps = [
         ":autocomplete",
         "//:node_modules/@angular/cdk",
+        "//:node_modules/@angular/common",
         "//:node_modules/@angular/core",
         "//:node_modules/@angular/forms",
         "//:node_modules/@angular/platform-browser",
