--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sbb-angular",
-  "version": "21.0.0-next.0",
+  "version": "21.0.0",
   "private": true,
   "packageManager": "pnpm@10.25.0",
   "engines": {
