--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -4,21 +4,21 @@ module(
     name = "components",
 )
 
-bazel_dep(name = "yq.bzl", version = "0.3.2")
+bazel_dep(name = "yq.bzl", version = "0.3.4")
 bazel_dep(name = "rules_nodejs", version = "6.6.2")
-bazel_dep(name = "aspect_rules_js", version = "2.8.2")
-bazel_dep(name = "rules_pkg", version = "1.1.0")
+bazel_dep(name = "aspect_rules_js", version = "2.9.1")
+bazel_dep(name = "rules_pkg", version = "1.2.0")
 bazel_dep(name = "tar.bzl", version = "0.7.0")
-bazel_dep(name = "aspect_bazel_lib", version = "2.21.2")
-bazel_dep(name = "aspect_rules_esbuild", version = "0.24.0")
-bazel_dep(name = "aspect_rules_jasmine", version = "2.0.0")
+bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
+bazel_dep(name = "aspect_rules_esbuild", version = "0.25.0")
+bazel_dep(name = "aspect_rules_jasmine", version = "2.0.2")
 bazel_dep(name = "platforms", version = "1.0.0")
-bazel_dep(name = "aspect_rules_ts", version = "3.7.1")
-bazel_dep(name = "bazel_skylib", version = "1.8.2")
+bazel_dep(name = "aspect_rules_ts", version = "3.8.1")
+bazel_dep(name = "bazel_skylib", version = "1.9.0")
 bazel_dep(name = "rules_browsers")
 git_override(
     module_name = "rules_browsers",
-    commit = "f066f614451374721fac787fb1f0dbbd818d50d4",
+    commit = "5f0e50d17d15c70e6ab5546f1659338ae94c4072",
     remote = "https://github.com/devversion/rules_browsers.git",
 )
 
@@ -32,14 +32,14 @@ git_override(
 bazel_dep(name = "rules_angular")
 git_override(
     module_name = "rules_angular",
-    commit = "9b751f826628cab386d1e8ae9c1fa766dbc6a495",
+    commit = "7133b97252508f8528e5c5818a9a73cacc2e2a0e",
     remote = "https://github.com/devversion/rules_angular.git",
 )
 
 bazel_dep(name = "devinfra")
 git_override(
     module_name = "devinfra",
-    commit = "95e3a0ede6dfa1aedd34b03918ad72b18f87e5ae",
+    commit = "8ce8257f740613a7291256173e2706fb2ed8aefa",
     remote = "https://github.com/angular/dev-infra.git",
 )
 
@@ -56,10 +56,15 @@ rules_ts_ext.deps(
 use_repo(rules_ts_ext, **{"npm_typescript": "components_npm_typescript"})
 
 node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
-node.toolchain(node_version = "22.12.0")
+node.toolchain(node_version_from_nvmrc = "//:.nvmrc")
 use_repo(node, "nodejs_toolchains")
 
 pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
+pnpm.pnpm(
+    name = "pnpm",
+    pnpm_version = "10.26.0",
+    pnpm_version_integrity = "sha512-Oz9scl6+cSUGwKsa1BM8+GsfS2h+/85iqbOLTXLjlUJC5kMZD8UfoWQpScc19APevUT1yw7dZXq+Y6i2p+HkAg==",
+)
 use_repo(pnpm, "pnpm")
 
 npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
